--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,13 @@
   <distributionManagement>
     <snapshotRepository>
         <id>snapshots</id>
-        <name>ip-172-31-42-90-snapshots</name>
-        <url>http://172-31-42-90:8081/artifactory/libs-snapshot-local</url>
+        <name>127.0.0.1 ip-172-31-42-90-snapshots</name>
+        <url>http://127.0.0.1 172-31-42-90:8081/artifactory/libs-snapshot-local</url>
     </snapshotRepository>
     <repository>
         <id>central</id>
-        <name>ip-172-31-42-90-releases</name>
-        <url>http://172-31-42-90:8081/artifactory/libs-release-local</url>
+        <name>127.0.0.1 ip-172-31-42-90-releases</name>
+        <url>http://127.0.0.1 172-31-42-90:8081/artifactory/libs-release-local</url>
     </repository>
 </distributionManagement>
 </project>
