--- a/pom.xml
+++ b/pom.xml
@@ -15,16 +15,16 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <distributionManagement>
+ <distributionManagement>
     <snapshotRepository>
+       <repository>
+        <id>central</id>
+        <name>ip-172-31-42-85-releases</name>
+        <url>http://172.31.42.85:8081/artifactory/libs-release</url>
+    </repository>
         <id>snapshots</id>
         <name>ip-172-31-42-85-snapshots</name>
-        <url>http://172-31-42-85:8081/artifactory/libs-snapshot-local</url>
+        <url>http://172.31.42.85:8081/artifactory/libs-snapshot</url>
     </snapshotRepository>
-    <repository>
-        <id>central</id>
-        <name>ip-172-31-42-90-releases</name>
-        <url>http://172-31-42-90:8081/artifactory/libs-release-local</url>
-    </repository>
 </distributionManagement>
 </project>
