--- a/pom.xml
+++ b/pom.xml
@@ -16,15 +16,15 @@
     </dependency>
   </dependencies>
  <distributionManagement>
-    <snapshotRepository>
-        <id>snapshots</id>
-       <name> ip-172-31-42-85-snapshots</name>
-       <url>http://172-31-42-85:8081/artifactory/libs-snapshot</url>
-    </snapshotRepository>
     <repository>
         <id>central</id>
         <name>ip-172-31-42-85-releases</name>
-        <url>http://172-31-42-85:8081/artifactory/libs-release</url>
+        <url>http://172.31.42.85:8081/artifactory/libs-release</url>
     </repository>
-</distributionManagement>
+    <snapshotRepository>
+        <id>snapshots</id>
+       <name> ip-172-31-42-85-snapshots</name>
+       <url>http://172.31.42.85:8081/artifactory/libs-snapshot</url>
+    </snapshotRepository>
+ </distributionManagement>
 </project>
